Fix minor layout issues

--- a/src/main/webapp/components/Layout.less
+++ b/src/main/webapp/components/Layout.less
@@ -101,7 +101,7 @@ body {
 
 		> footer { bottom: 0;
 			   grid-row: 4;
-			   height: 20px;
+			   height: 22px;
 			   padding: 4px;
 			   display: flex;
 			   font-size: 12px;
